# marcus-playground-backend

./: .editorconfig  .gitignore  JustABackend.sln  README.md  ScreenCheatSheet.md  default  publish-dotnet.ps1  publish-dotnet.sh
.github/workflows/: dotnet.yml  haskell.yml  rust.yml
src/: Ef-tools.md  publish.md  setup_server.md
src/Blog/: Blog.sln
src/Blog/BlogService/: Blog.db  BlogService.csproj  Program.cs  publish.ps1
src/Blog/BlogService.Int.Tests/: BlogService.Int.Tests.csproj
src/Blog/BlogService.Tests/: BlogService.Tests.csproj
src/BoardGames/: BoardGames.cabal  CHANGELOG.md  README.md  package.yaml
src/CleanArchitecture/Application/: Application.csproj  AssemblyReference.cs
src/Dashboard/: Dashboard.sln
src/Dashboard/Dashboard/: Dashboard.csproj  Program.cs  appsettings.json
src/Dashboard/Dashboard.Tests/: UnitTest1.cs
src/Dev/: Dev.sln  README.md
src/Dev/Dev/: Dev.csproj  Program.cs  appsettings.json
src/Dev/Dev.Int.Tests/: Dev.Int.Tests.csproj
src/Dev/Dev.Tests/: UnitTest1.cs
src/Identity/: Identity.csproj  Identity.http  Program.cs  appsettings.json
src/Tracker/: .gitignore  Dockerfile  LICENSE  README.md  TrackerService.cabal  build.ps1  package.yaml  publish.ps1  stack.yaml
src/UsernameGenerator/: Cargo.toml  README.md  deploy.ps1  hotreload.ps1
src/UsernameGenerator/src/: main.rs
src/UsernameGenerator/src/components/: adjectives.txt  animals.txt  component.rs  cool_numbers.txt  mod.rs  nouns.txt
test/Architecture.Tests/: Architecture.Tests.csproj  ArchitectureTests.cs  DomainTests.cs  TestResultFormatter.cs
(+142 files in other folders)
