[package]
name = "username_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
itertools = "0.12.0"
rand = "0.8.5"
rusqlite = "0.30.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_with = "3.4.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
